import 'package:flutter/cupertino.dart';

class Constants {
  // App Info
  static const String appName = 'Settings Redesign';

  // Colors
  static const Color backgroundColor = Color(0xFFF2F2F7);
  static const Color cardColor = Color(0xFFFFFFFF);
  static const Color textColor = Color(0xFF000000);
  static const Color subTextColor = Color(0xFF8E8E93);
  static const Color dividerColor = Color(0xFFC6C6C8);
  static const Color chevronColor = Color(0xFFC7C7CC);

  static const Color greenColor = Color(0xFF34C759);
  static const Color grayIconColor = Color(0xFF8E8E93);
  static const Color lightMode = Color(0xFFbed627);
  static const Color darkMode = Color(0xFFb6b9ae);

  // Padding
  static const double screenPadding = 20.0;

  // Border Radius
  static const double sectionRadius = 14.0;

  // Tile Radius
  static const double tileRadius = 8.0;

  // Spacing
  static const double defaultSpacing = 12.0;
}
